# effective-recorder

./: .gitignore  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.md  README.en.md  README.md  USER_STORIES.md  build-ffmpeg-static.sh  package-lock.json  package.json  rebuild.sh  svelte.config.js
.github/workflows/: build.yml
scripts/: install-apple-silicon.command  install-intel-mac.command
src/: app.html
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.conf.qa.json
src-tauri/capabilities/: default.json  macos.json
src-tauri/examples/: test_encode.rs
src-tauri/src/: audio.rs  encoder.rs  history.rs  lib.rs  main.rs  permissions.rs  recorder.rs  screen.rs  settings.rs  transcription.rs  transcription_queue.rs
src/routes/: +page.svelte
src/routes/camera-overlay/: +page.svelte
