[package]
name = "effective-recorder"
version = "0.1.3"
description = "A cross-platform screen recorder built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "effective_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.4"
cpal = "0.15"
ffmpeg-next = "8.1"
crossbeam-channel = "0.5"
chrono = "0.4"
dirs = "6"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
tauri-plugin-dialog = "2.6.0"
opener = { version = "0.7", features = ["reveal"] }
whisper-rs = "0.13"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = "0.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"

[target."cfg(target_os = \"macos\")".dependencies]
tauri-plugin-macos-permissions = "2.3.0"
objc2-core-graphics = "0.3.2"
objc2-core-foundation = "0.3.2"
libc = "0.2"
